main heading visibility fixed, added clicked buttons hover effect, added current year in footer section

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,12 @@ nav a#pull {
 	display: none;
 }
 
+.mainHeading{
+	color: #25948F !important;
+	text-align: center;
+	font-weight: 600 !important;
+}
+
 .about-img{
 	width: 100%;
 	height: 100%;
@@ -479,12 +485,15 @@ a.review-btn{
 	border-radius: 0.4em;
 	-moz-border-radius: 0.4em;
 	-o-border-radius: 0.4em;
+	box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
 }
 
 .review-btn:hover{
 	text-decoration: none;
 	border:2px solid #F2685C;
 	color:#fff;
+	transform: scale(0.96);     
+    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
 }
 /*--- Slider Part Starts Here ----*/
 /*------------------ Slider Part starts Here----------*/
@@ -644,10 +653,13 @@ div#demo {
 	background: #1F958E;
 	font-weight: 700;
 	width:60%;
+	box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
 }
 .Down-btn:hover{
 	text-decoration: none;
 	border:2px solid #F2685C;
+	transform: scale(0.96);
+	box-shadow: 3px 4px 20px 1px rgba(0, 0, 0, 0.24);
 	color:#fff;
 }
 .download_grid3 {
@@ -740,6 +752,9 @@ p.comment-form-author {
 	background: none;
 	border: 2px solid #fff;
 	color:#fff;
+}
+.formInput:focus{
+	border: 2px solid #2ABF5E;
 }
 /*******footer***/
 .footer {
